--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,11 +8,11 @@
 
 body, html{
     height: 100vh;
-    width: 100vw;
-    background-color: aquamarine;
+    width: 100vw;    
 }
 
 body{
+    height: 100vh;
     background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
     background-size: cover;
     background-attachment: fixed;
@@ -36,8 +36,28 @@ section#telefone{
 
 iframe#tela{
     position: relative;
-    top: 80px;
-    left: 22px;
-    width: 263px;
-    height: 467px;
+    top: 77px;
+    left: 18px;
+    width: 267px;
+    height: 471px;
+}
+
+section#redes-sociais{
+    text-align: right;
+    padding: 5px;
+}
+
+section#redes-sociais img:hover{
+    border: 3px solid rgb(255, 255, 255, 0.637) ;
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.623);
+    transition: transform .2s, border 1s;
+}
+
+section#redes-sociais img{
+    width: 70px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2x 2px 5px #00000093;
+    box-sizing: border-box;
 }
